fixed issue with null discounts that did not resulted in pad left value

--- a/ICC/ICC.csproj
+++ b/ICC/ICC.csproj
@@ -3,13 +3,9 @@
 	<PropertyGroup>
 		<TargetFramework>netstandard2.0</TargetFramework>
 		<PackageId>ICC</PackageId>
-		<PackageVersion>1.0.0</PackageVersion>
+		<PackageVersion>1.0.1</PackageVersion>
 		<Authors>Gijs Mater</Authors>
-		<Description>
-			This package is a light weight SDK for handeling ICC messages.
-			ICC messages are used for communicating price agreements from supplier to supplier.
-			For more information, see: https://www.2ba.nl/wp-content/uploads/2015/01/ICC_Bericht_11.pdf
-		</Description>
+		<Description>This package is a light weight SDK for handeling ICC messages. ICC messages are used for communicating price agreements from supplier to supplier.</Description>
 		<Title>ICC SDK</Title>
 		<PackageLicenseExpression>MIT</PackageLicenseExpression>
 		<PackageReadmeFile>README.md</PackageReadmeFile>
